<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="viewModel"
                type="com.riluq.seafood.detail.DetailViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".detail.DetailFragment">
        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:context=".detail.DetailFragment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:id="@+id/scrollView2"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{viewModel.selectedSeafood.mealImage}"
                        tools:src="@tools:sample/backgrounds/scenic"/>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/name"
                            android:textSize="18sp"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@{viewModel.selectedSeafood.mealName}"
                            tools:text="Seafood"
                            android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/category"
                            android:textSize="18sp"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@{viewModel.selectedSeafood.mealCategory}"
                            tools:text="Seafood"
                            android:textSize="18sp"/>

                </LinearLayout>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/area"
                            android:textSize="18sp"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@{viewModel.selectedSeafood.mealArea}"
                            tools:text="British"
                            android:textSize="18sp"/>

                </LinearLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/instructions"
                        android:textSize="20sp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:justificationMode="inter_word"
                        android:layout_weight="2"
                        android:text="@{viewModel.selectedSeafood.mealInstructions}"
                        tools:text="eat oven to 180C/fan 160C/gas 4. Trim the fronds from the fennel and set aside. Cut the fennel bulbs in half, then cut each half into 3 wedges. Cook in boiling salted water for 10 mins, then drain well. Chop the fennel fronds roughly"
                        android:textSize="18sp"/>

            </LinearLayout>
        </ScrollView>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/linearLayout">

            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/youtube"
                    android:textSize="20sp"
                    android:onClick="@{() -> viewModel.onYoutubeClicked()}"
                    android:textColor="@android:color/white"
                    android:background="#c4302b"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/source"
                    android:textSize="20sp"
                    android:onClick="@{() -> viewModel.onSourceClicked()}"
                    android:textColor="@android:color/white"
                    android:background="#2196F3"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


